--- a/Editor/TMU.asmdef
+++ b/Editor/TMU.asmdef
@@ -13,6 +13,12 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": [],
+    "versionDefines": [
+        {
+            "name": "com.unity.burst",
+            "expression": "0.0.0",
+            "define": "HAS_BURST"
+        }
+    ],
     "noEngineReferences": false
 }
